continue refactoring Encounter and its usages