@@ -24,8 +24,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             System.out.println(area);
             for (Encounter enc : area) {
                 if(enc.getSpecies().isLegendary()) {
-                    Species forme = enc.getSpecies().getForme(enc.getFormeNumber());
-                    fail(forme.getFullName() + " is legendary!");
+                    fail(enc.getSpecies().getNumberAndFullName() + " is legendary!");
                 }
             }
         }
@@ -88,8 +87,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             System.out.println(area.getDisplayName() + ":");
             System.out.println(area);
             for (Encounter enc : area) {
-                if (enc.getSpecies().getBaseForme() != null ||
-                        enc.getFormeNumber() != enc.getSpecies().getFormeNumber()) {
+                if (!enc.getSpecies().isBaseForme()) {
                     System.out.println(enc.getSpecies());
                     hasAltFormes = true;
                     break;
@@ -730,13 +728,12 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
             System.out.println("\n" + area.getDisplayName() + ":\n" + area);
             Encounter firstEnc = area.getFirst();
-            Species firstSpec = firstEnc.getSpecies().getForme(firstEnc.getFormeNumber());
-            SpeciesSet allInArea = area.getSpeciesInArea();
+            Species firstSpec = firstEnc.getSpecies();
 
             Type primaryType = firstSpec.getPrimaryType(false);
             boolean primaryTypeMatched = true;
             for(Encounter enc : area) {
-                Species spec = enc.getSpecies().getForme(enc.getFormeNumber());
+                Species spec = enc.getSpecies();
                 if(!spec.hasType(primaryType, false)) {
                     System.out.println(spec);
                     primaryTypeMatched = false;
@@ -753,7 +750,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
                 boolean secondaryTypeMatched = true;
                 for(Encounter enc : area) {
-                    Species spec = enc.getSpecies().getForme(enc.getFormeNumber());
+                    Species spec = enc.getSpecies();
                     if(!spec.hasType(secondaryType, false)) {
                         System.out.println(spec);
                         secondaryTypeMatched = false;
@@ -786,7 +783,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             beforeAreaStrings.add(beforeStrings);
             beforeStrings.add(area.toString());
             for (Encounter enc : area) {
-                Species pk = enc.getSpecies().getForme(enc.getFormeNumber());
+                Species pk = enc.getSpecies();
                 beforeStrings.add(toNameAndTypesString(pk));
             }
 
@@ -798,7 +795,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     }
 
     private Type getThemedAreaType(EncounterArea area) {
-        Species first = area.get(0).getSpecies();
+        Species first = area.getFirst().getSpecies();
         Type primary = first.getPrimaryType(true);
         Type secondary = first.getSecondaryType(true);
         for (int i = 1; i < area.size(); i++) {
@@ -843,7 +840,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
                 System.out.println("Type Theme: " + theme);
                 System.out.println("After: " + area);
                 for (Encounter enc : area) {
-                    Species sp = enc.getSpecies().getForme(enc.getFormeNumber());
+                    Species sp = enc.getSpecies();
                     System.out.println("\t" + toNameAndTypesString(sp));
                     assertTrue(sp.getPrimaryType(false) == theme || sp.getSecondaryType(false) == theme);
                 }
@@ -864,7 +861,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             List<Type> beforeTypes = new ArrayList<>();
             beforePrimaryTypes.add(beforeTypes);
             for (Encounter enc : area) {
-                Species pk = enc.getSpecies().getForme(enc.getFormeNumber());
+                Species pk = enc.getSpecies();
                 beforeStrings.add(toNameAndTypesString(pk));
                 beforeTypes.add(pk.getPrimaryType(false));
             }
@@ -884,7 +881,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             System.out.println("After: " + area);
             for (int j = 0; j < area.size(); j++) {
                 Encounter enc = area.get(j);
-                Species pk = enc.getSpecies().getForme(enc.getFormeNumber());
+                Species pk = enc.getSpecies();
                 Type primary = beforePrimaryTypes.get(i).get(j);
                 System.out.println("\t" + toNameAndTypesString(pk));
                 assertTrue(pk.getPrimaryType(false) == primary || pk.getSecondaryType(false) == primary);
@@ -1482,11 +1479,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     }
 
     private Species getNonCosmeticForme(Encounter enc) {
-        Species base = enc.getSpecies();
-        int formeNumber = enc.getFormeNumber();
-        Species forme = base.getForme(formeNumber);
-
-        return forme.isEssentiallyCosmetic() ? base : forme;
+        return enc.getSpecies().isEssentiallyCosmetic() ? enc.getBaseSpecies() : enc.getSpecies();
     }
 
     private static String pokemapToString(Map<Species, Species> map) {
